--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,14 @@
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <uses-permission android:name="android.permission.INTERNET" />
+
+                <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+                <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+                <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
             </intent-filter>
         </activity>
     </application>
